@@ -15,6 +15,7 @@ Others:
 - support for new links color in gopher (by JMCS)
 - fix an off by one bug in "cp url XX" 
 - Ansicat: Fix incorrectly identifying RSS feeds as XHTML when there was no entry
+- Fix sync hanging on gopher interactive prompt (by JMCS)
 
 ## 2.8 - November 13th 2025
 - New option "images_size" to use with "set" (idea by aelius)
